feature/get application by company
