# server/src/routes/application.router.js
@@ -8,4 +8,5 @@ module.exports = require('express').Router()
     .get('/detail', verifyToken, applicationController.getOne)
     .get('/get-by-jobid', verifyTokenIsAdmin, applicationController.getAllByJobId)
     .get('/get-by-userid', verifyToken, applicationController.getAllByUserrId)
+    .get('/company', verifyTokenIsAdmin, applicationController.getAllApplicationByCompanyId)
     .post('/create', verifyToken, firebaseUpload.upload.single('cv'), firebaseUpload.fireBaseCvUpload, applicationController.create)
